Avoid double border on adress inputs

--- a/galette/templates/default/galette.css
+++ b/galette/templates/default/galette.css
@@ -225,6 +225,10 @@ footer li {
 /* =/ Footer */
 
 /* == Main Galette styles */
+#adresse2_adh {
+    border-top: 0;
+}
+
 #listfilter {
 	text-align: center;
 	background-color: #DDDDFF;
